--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ a {
     width: 300px;
     background-color: lightgrey;
     padding: 20px;
-    margin-top: 100px;
+    margin-top: 10%;
     text-align: center;
     font-size: 16px;
     margin-left: auto;
